service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-deployment
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
